<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textView4"
        android:layout_width="411dp"
        android:layout_height="71dp"
        android:text="@string/lostpet"
        android:textAlignment="center"
        android:textSize="30dp" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="411dp"
        android:layout_height="71dp"
        android:text="@string/lostpet1"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="20dp"
        tools:layout_editor_absoluteY="176dp" />

    <ToggleButton
        android:id="@+id/buttonAccept2"
        android:layout_width="182dp"
        android:layout_height="72dp"
        android:backgroundTint="@color/wood"
        android:textColor="@color/white"
        android:textOff="@string/choose_photo"
        android:textOn="@string/choose_photo"
        android:textSize="16dp"
        tools:layout_editor_absoluteX="114dp"
        tools:layout_editor_absoluteY="329dp" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="411dp"
        android:layout_height="71dp"
        android:text="@string/wholost1"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="30dp"
        tools:layout_editor_absoluteY="96dp" />

    <Button
        android:id="@+id/button5"
        android:layout_width="130dp"
        android:layout_height="71dp"
        android:backgroundTint="@color/green"
        android:text="@string/next"
        tools:layout_editor_absoluteX="140dp"
        tools:layout_editor_absoluteY="566dp" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="414dp"
        android:layout_height="47dp"
        android:text="@string/photo"
        android:textAlignment="center"
        android:textColor="@color/gray"
        android:textSize="20dp"
        tools:layout_editor_absoluteY="257dp" />

</androidx.constraintlayout.widget.ConstraintLayout>