<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".whFormNext">

    <TextView
        android:id="@+id/textView4"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/lostpet"
        android:textAlignment="center"
        android:textSize="30dp"
        app:layout_constraintBottom_toTopOf="@+id/textView5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/textView7"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="27dp"
        android:text="@string/pol"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="20dp"
        app:layout_constraintBottom_toTopOf="@+id/textView6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/wholost"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="30dp"
        app:layout_constraintBottom_toTopOf="@+id/textView7"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <Button
        android:id="@+id/button5"
        android:layout_width="130dp"
        android:layout_height="0dp"
        android:layout_marginBottom="94dp"
        android:backgroundTint="@color/green"
        android:onClick="transistionNext"
        android:text="@string/next"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/materialButtonToggleGroupSex" />


    <TextView
        android:id="@+id/textView6"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="32dp"
        android:text="@string/pol2"
        android:textAlignment="center"
        android:textColor="@color/gray"
        android:textSize="20dp"
        app:layout_constraintBottom_toTopOf="@+id/materialButtonToggleGroupKind"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView7" />

    <com.google.android.material.button.MaterialButtonToggleGroup
        android:id="@+id/materialButtonToggleGroupKind"
        android:layout_width="0dp"
        android:layout_height="100dp"
        android:layout_marginStart="70dp"
        android:layout_marginEnd="70dp"
        android:layout_marginBottom="48dp"
        android:addStatesFromChildren="false"
        app:layout_constraintBottom_toTopOf="@+id/textView3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView6"
        app:singleSelection="true">

        <Button
            android:id="@+id/buttoncat"
            android:layout_width="132dp"
            android:layout_height="96dp"
            android:backgroundTint="@color/wood"
            android:text="@string/cat"
            android:textColor="@color/white"
            android:textSize="16dp"
            tools:layout_editor_absoluteX="171dp"
            tools:layout_editor_absoluteY="279dp" />

        <Button
            android:id="@+id/buttondog"
            android:layout_width="132dp"
            android:layout_height="96dp"
            android:backgroundTint="#000000"
            android:text="@string/dog"
            android:textColor="@color/white"
            android:textSize="16dp"
            tools:layout_editor_absoluteX="30dp"
            tools:layout_editor_absoluteY="279dp" />

        >
    </com.google.android.material.button.MaterialButtonToggleGroup>

    <com.google.android.material.button.MaterialButtonToggleGroup
        android:id="@+id/materialButtonToggleGroupSex"
        app:singleSelection="true"
        android:layout_width="0dp"
        android:layout_height="100dp"
        android:layout_marginStart="70dp"
        android:layout_marginEnd="70dp"
        android:layout_marginBottom="66dp"
        app:layout_constraintBottom_toTopOf="@+id/button5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3">

        <Button
            android:id="@+id/buttonboy"
            android:layout_width="132dp"
            android:layout_height="96dp"
            android:layout_marginStart="29dp"
            android:layout_marginEnd="80dp"
            android:layout_marginBottom="23dp"
            android:backgroundTint="#000000"
            android:text="@string/boy"
            android:textColor="@color/white"
            android:textSize="16dp"
            app:layout_constraintBottom_toTopOf="@+id/button5"
            app:layout_constraintEnd_toStartOf="@+id/buttonAccept3"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView3" />

        <Button
            android:id="@+id/buttongirl"
            android:layout_width="132dp"
            android:layout_height="96dp"
            android:layout_marginTop="21dp"
            android:layout_marginEnd="140dp"
            android:layout_marginBottom="24dp"
            android:backgroundTint="@color/wood"
            android:text="@string/girl"
            android:textColor="@color/white"
            android:textSize="16dp" />

    </com.google.android.material.button.MaterialButtonToggleGroup>

    <TextView
        android:id="@+id/textView3"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="20dp"
        android:text="@string/pol1"
        android:textAlignment="center"
        android:textColor="@color/gray"
        android:textSize="20dp"
        app:layout_constraintBottom_toTopOf="@+id/materialButtonToggleGroupSex"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/materialButtonToggleGroupKind" />


</androidx.constraintlayout.widget.ConstraintLayout>