<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".regActivity">


    <TextView
        android:id="@+id/textView"
        android:layout_width="0dp"
        android:layout_height="0dp"

        android:layout_marginBottom="2dp"
        android:fontFamily="sans-serif-medium"
        android:text="@string/pet_search_service"
        android:textAlignment="center"
        android:textColor="#deb887"
        android:textSize="35sp"
        app:layout_constraintBottom_toTopOf="@+id/textView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="410dp"
        android:layout_height="125dp"
        android:layout_marginStart="4dp"
        android:layout_marginEnd="4dp"
        android:layout_marginBottom="6dp"
        android:src="@drawable/logo"
        app:layout_constraintBottom_toTopOf="@+id/textView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="401dp"
        android:layout_height="37dp"
        android:layout_marginStart="3dp"
        android:layout_marginEnd="3dp"
        android:layout_marginBottom="14dp"
        android:text="@string/Reg"
        android:textAlignment="center"
        android:textColor="#deb887"
        android:textSize="25sp"
        app:layout_constraintBottom_toTopOf="@+id/login"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <EditText
        android:id="@+id/login"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="51dp"
        android:layout_marginEnd="51dp"
        android:layout_marginBottom="20dp"
        android:hint="@string/Lg"
        android:inputType="textEmailAddress"
        android:textAlignment="center"
        app:layout_constraintBottom_toTopOf="@+id/email"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <EditText
        android:id="@+id/email"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="49dp"
        android:layout_marginEnd="49dp"
        android:layout_marginBottom="19dp"
        android:hint="@string/Email"
        android:inputType="textEmailAddress"
        android:textAlignment="center"
        app:layout_constraintBottom_toTopOf="@+id/pass"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login" />

    <EditText
        android:id="@+id/passAgain"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="51dp"
        android:layout_marginEnd="51dp"
        android:layout_marginBottom="38dp"
        android:hint="@string/PassAg"
        android:inputType="textPassword"
        android:textAlignment="center"
        app:layout_constraintBottom_toTopOf="@+id/buttonBack"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pass" />

    <EditText
        android:id="@+id/pass"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="51dp"
        android:layout_marginEnd="51dp"
        android:layout_marginBottom="15dp"
        android:hint="@string/Pass"
        android:inputType="textPassword"
        android:textAlignment="center"
        app:layout_constraintBottom_toTopOf="@+id/passAgain"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/email" />

    <Button
        android:id="@+id/buttonAccept"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginEnd="33dp"
        android:backgroundTint="@color/wood"
        android:text="@string/Accept"
        app:layout_constraintBottom_toBottomOf="@+id/buttonBack"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/buttonBack"
        app:layout_constraintTop_toTopOf="@+id/buttonBack" />

    <Button
        android:id="@+id/buttonBack"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="29dp"
        android:layout_marginEnd="41dp"
        android:layout_marginBottom="33dp"
        android:backgroundTint="#000000"
        android:onClick="transistionAuth"
        android:text="@string/Back"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/buttonAccept"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/passAgain" />

</androidx.constraintlayout.widget.ConstraintLayout>